--- a/PORTIFOLIO/contatos.html
+++ b/PORTIFOLIO/contatos.html
@@ -17,8 +17,11 @@
     <hr>
 
     <section>
+        <main>
         <h1> Contatos </h1>
-        <p> Email:fabrigracielle7@gmail.com </p>
+        </main>
+        <p> Email: <br>
+            <br>fabrigracielle7@gmail.com </p>
         <hr>
         <nav>
 
