--- a/PORTIFOLIO/formacoes.html
+++ b/PORTIFOLIO/formacoes.html
@@ -14,7 +14,9 @@
         <a href="contatos.html">CONTATOS</a>
     </header>
     <hr>
+    <main>
     <h1>Formação Acadêmica</h1>
+    </main>
     <p>Ensino Médio – Cursando
         ETEC. Parque da Juventude
     </p>
