--- a/PORTIFOLIO/sobre.html
+++ b/PORTIFOLIO/sobre.html
@@ -12,7 +12,10 @@
         <a href="contatos.html">CONTATOS</a>
     </header>
     <hr>
+   
+    <main>
     <h1>Quem sou eu?</h1>
+    </main>
     <p>Sou uma jovem, em busca de oportunidades para aprender e crescer no mundo profissional.
         Atualmente estou me aprofunfando na área de Tecnologia da Informação (TI), estou determinada a adquirir experiências práticas em um ambiente de trabalho dinâmico.
         Busco desenvolver minhas habilidades em tecnologia e contribuir de forma positiva para o sucesso da empresa. Sou proativa, dedicada e estou ansiosa para buscar novos desafios enquanto construo uma base sólida para minha carreira profissional.</p>
