--- a/PORTIFOLIO/meuportifolio.html
+++ b/PORTIFOLIO/meuportifolio.html
@@ -14,19 +14,24 @@
         <a href="contatos.html">CONTATOS</a>
     </header>
     <hr>
+    <main>
     <h1>Gracielle Fabri Ferreira</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos ea dignissimos animi dolorem praesentium
-        necessitatibus. Sit officia delectus sint saepe sunt maxime provident expedita sequi corporis, fugit assumenda
-        quam iusto</p>
-    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum voluptatum cupiditate ullam neque animi, nihil,
-        quo deleniti deserunt fuga minima, repudiandae quam aut quod adipisci fugiat aperiam perspiciatis. Eum,
-        consequuntur</P>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet itaque aut, laboriosam corporis distinctio aliquam
-        earum accusamus at voluptatem, pariatur eveniet officia necessitatibus voluptatibus delectus expedita quibusdam
-        est deserunt quas.</p>
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ad officiis iste, perspiciatis quis nobis
-        sit error asperiores molestiae consectetur minima alias officia corrupti similique natus? Hic, unde!
-        Repellendus, quae.</p>
+    </main>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga eveniet perferendis consectetur ullam provident adipisci minima, error, a cumque nulla placeat vitae laboriosam illum! Quia laborum mollitia asperiores veniam vitae?
+    </p>
+
+    <ul>
+        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus, iusto! Id, placeat ut! Excepturi hic, molestias quis sint ab delectus officiis necessitatibus quas facere corporis ipsam pariatur asperiores corrupti temporibus!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae tempora maxime veritatis nostrum magni, odit, ullam temporibus perspiciatis eos fugit consectetur distinctio, officiis culpa. Iure praesentium soluta perspiciatis tempore velit.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate magni quia, eveniet fugit mollitia, vitae ad deserunt quo animi assumenda iure culpa maxime? Ducimus itaque modi dicta fuga doloribus aspernatur.</li>
+    </ul>
+    <hr>
+    <ul>
+        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus, iusto! Id, placeat ut! Excepturi hic, molestias quis sint ab delectus officiis necessitatibus quas facere corporis ipsam pariatur asperiores corrupti temporibus!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae tempora maxime veritatis nostrum magni, odit, ullam temporibus perspiciatis eos fugit consectetur distinctio, officiis culpa. Iure praesentium soluta perspiciatis tempore velit.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate magni quia, eveniet fugit mollitia, vitae ad deserunt quo animi assumenda iure culpa maxime? Ducimus itaque modi dicta fuga doloribus aspernatur.</li>
+    </ul>
+   
 </body>
 
 </html>
