Termino da atividade

--- a/PORTIFOLIO/contatos.html
+++ b/PORTIFOLIO/contatos.html
@@ -18,17 +18,18 @@
 
     <section>
         <main>
-        <h1> Contatos </h1>
+            <h1> Contatos </h1>
         </main>
         <p> Email: <br>
-            <br>fabrigracielle7@gmail.com </p>
+            <br>fabrigracielle7@gmail.com
+        </p>
         <hr>
         <nav>
 
             <p>LinKedln:</p><a
                 href="https://www.linkedin.com/in/gracielle-fabri-ferreira-718b03300?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">Gracielle
                 Fabri</a>
-                <hr>
+            <hr>
             <p>GitHub:</p>
             <a href="" https://github.com/crffabri>crffabri</a>
         </nav>
